[gd_scene load_steps=12 format=2]

[ext_resource path="res://library/common/HurtBox.tscn" type="PackedScene" id=1]
[ext_resource path="res://library/common/DetectBox.tscn" type="PackedScene" id=2]
[ext_resource path="res://library/common/HitBox.tscn" type="PackedScene" id=3]
[ext_resource path="res://assets/graphics/actors/player/Hooded knight_finalsheet.png" type="Texture" id=4]
[ext_resource path="res://scenes/actors/player/Player.gd" type="Script" id=5]
[ext_resource path="res://scenes/actors/player/states/Idle.tscn" type="PackedScene" id=6]
[ext_resource path="res://scenes/actors/player/states/StateMachine.tscn" type="PackedScene" id=7]
[ext_resource path="res://scenes/actors/player/states/AltAct.tscn" type="PackedScene" id=8]
[ext_resource path="res://scenes/actors/player/states/Dash.tscn" type="PackedScene" id=9]
[ext_resource path="res://scenes/actors/player/states/Walk.tscn" type="PackedScene" id=10]

[sub_resource type="CircleShape2D" id=1]
radius = 6.0

[node name="Player" type="KinematicBody2D"]
script = ExtResource( 5 )

[node name="DetectBox" parent="." instance=ExtResource( 2 )]

[node name="HitBox" parent="." instance=ExtResource( 3 )]

[node name="HurtBox" parent="." instance=ExtResource( 1 )]

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 0, -11 )
texture = ExtResource( 4 )
hframes = 10
vframes = 15

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="TapTimer" type="Timer" parent="."]
wait_time = 0.3
one_shot = true

[node name="DashCD" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="AltAttackCT" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="StateMachine" parent="." instance=ExtResource( 7 )]

[node name="Idle" parent="StateMachine" instance=ExtResource( 6 )]

[node name="Dash" parent="StateMachine" instance=ExtResource( 9 )]

[node name="AltAct" parent="StateMachine" instance=ExtResource( 8 )]

[node name="Walk" parent="StateMachine" instance=ExtResource( 10 )]

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
